# RAG

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
docker/: Dockerfile  docker-compose.yml
docs/: README.md
migrations/: 001_initial_migration.py
src/: __init__.py  main.py
src/agents/: __init__.py  orchestrator.py
src/api/: companies.py  documents.py  evaluation.py  health.py  metrics.py  queries.py  routes.py  schema.py
src/core/: config.py  database.py  models.py
src/evaluation/: golden_set.py  service.py
src/llm/: service.py
src/monitoring/: __init__.py  metrics.py
src/retrieval/: service.py
src/scripts/: ingest.py  seed_business_data.py
src/text_to_sql/: service.py
src/validation/wandb_integration/: service.py
tests/fixtures/: sql_golden_set.json
tests/unit/: test_agents.py  test_api.py  test_golden_set.py
