[project]
name = "rag-system"
version = "0.1.0"
description = "Production RAG system with Text-to-SQL and company knowledge base"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langgraph>=1.1.6",
    "requests>=2.33.1",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.31.0",
    "aiosqlite>=0.20.0",
    "pgvector>=0.3.0",
    "ollama>=0.3.0",
    "sentence-transformers>=3.0.0",
    "wandb>=0.17.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "alembic>=1.13.0",
    "structlog>=24.0.0",
    "prometheus-client>=0.20.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "rank-bm25>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.27",
    "psycopg2>=2.9.11",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "faker>=25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
